--- a/config/database.yml
+++ b/config/database.yml
@@ -4,9 +4,9 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: utf8
-  database: bloccit_development
+  database: db/development.sqlite3
   host: localhost
   pool: 5
   timeout: 5000
@@ -15,9 +15,9 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: utf8
-  database: bloccit_test
+  database: db/test.sqlite3
   host: localhost
   pool: 5
   timeout: 5000
